--- a/k8s/database/secrets.yaml
+++ b/k8s/database/secrets.yaml
@@ -2,8 +2,9 @@ apiVersion: v1
 kind: Secret
 metadata: 
   namespace: three-tier
-  name: postgres-sec
+  name: mysql-sec
 type: Opaque
 data:  
-  password: c2RmdnNuZnNmc3NzMjQz # Replace with actual base64-encoded password
-  username: YWRtaW4= # Replace with actual base64-encoded username
+  username: YWRtaW4=               # admin (base64)
+  password: c2RmdnNuZnNmc3NzMjQz   # sdfvsnfsfss243 (base64)
+  root_password: cm9vdHBhc3MxMjM=  # rootpass123 (base64)
