--- a/k8s/database/pv.yaml
+++ b/k8s/database/pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: postgres-pv
+  name: mysql-pv
   namespace: three-tier
 spec:
   capacity: 
@@ -10,4 +10,4 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /data/postgres # Update path for PostgreSQL
+    path: /data/mysql  # Changed from /data/postgres to /data/mysql
