--- a/k8s/database/service.yaml
+++ b/k8s/database/service.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: three-tier
-  name: postgres-svc
+  name: mysql-svc
 spec:
   selector:
-    app: postgres
+    app: mysql
   ports:
-  - name: postgres
+  - name: mysql
     protocol: TCP
-    port: 5432
-    targetPort: 5432
-  type: LoadBalancer
+    port: 3306
+    targetPort: 3306
+  type: LoadBalancer  # Use ClusterIP unless you specifically need external access
