--- a/k8s/backend/deployment.yaml
+++ b/k8s/backend/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       - name: ecr-registry-secret
       containers:
       - name: api
-        image: 842945290089.dkr.ecr.ap-south-1.amazonaws.com/backend:latest
+        image: 842945290089.dkr.ecr.ap-south-1.amazonaws.com/backend:18
         imagePullPolicy: Always
         env:
           - name: DB_CONNECTION
