--- a/k8s/backend/deployment.yaml
+++ b/k8s/backend/deployment.yaml
@@ -35,7 +35,7 @@ spec:
           - name: DB_PORT
             value: "3306"
           - name: DB_DATABASE
-            value: mydatabase
+            value: laravel_db
           - name: DB_USERNAME
             valueFrom:
               secretKeyRef:
