ingress code work

--- a/k8s/backend-ingress/backend-ingress.yaml
+++ b/k8s/backend-ingress/backend-ingress.yaml
@@ -13,7 +13,7 @@ spec:
     - host: a5fa6bc0b51bb4992a37ec1bb0437fc6-963901666.ap-south-1.elb.amazonaws.com # Use your backend ALB DNS here
       http:
         paths:
-          - path: /api/*
+          - path: /api/
             pathType: Prefix
             backend:
               service:
